<package>
  <name>moveit_ompl_planning_interface</name>
  <version>0.1.0</version>
  <description>Plugin interface for OMPL and MoveIt planners</description>
  <author email="rluna@rice.edu">Ryan Luna</author>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ompl</build_depend>
  <build_depend>moveit_planners_ompl</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>ompl</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <moveit_core plugin="${prefix}/moveit_ompl_plugin_description.xml"/>
    <moveit_ompl_planning_interface plugin="${prefix}/ompl_geometric_planning_plugin_description.xml"/>
  </export>

</package>
